--- a/pdf/bioenergetics.tex
+++ b/pdf/bioenergetics.tex
@@ -20,11 +20,9 @@ Adenosine triphosphate (ATP) is the main ``energy currency'' for organisms; the 
 \caption{\href{https://commons.wikimedia.org/wiki/File:Adenosintriphosphat_protoniert.svg}{Structure of adenosine triphosphate (ATP), protonated}}\label{fig:atpstrucform}
 \end{figure}
 
-Living organisms produce ATP from energy sources, mostly sunlight or O2, mainly via oxidative phosphorylation. The terminal phosphate bonds of ATP are relatively weak compared with the stronger bonds formed when ATP is hydrolyzed (broken down by water) to adenosine diphosphate and inorganic phosphate. Here it is the thermodynamically favorable free energy of hydrolysis that results in energy release; the phosphoanhydride bond between the terminal phosphate group and the rest of the ATP molecule does not itself contain this energy. An organism's stockpile of ATP is used as a battery to store energy in cells. Utilization of chemical energy from such molecular bond rearrangement powers biological processes in every biological organism.
+Living organisms produce ATP from energy sources, such as sunlight and organic compounds including carbohydrates, lipids and proteins, mainly via oxidative phosphorylation. The terminal phosphate bonds of ATP are relatively weak compared with the stronger bonds formed when ATP is hydrolyzed to adenosine diphosphate and inorganic phosphate. Here it is the thermodynamically favorable free energy of hydrolysis that results in energy release; the phosphoanhydride bond between the terminal phosphate group and the rest of the ATP molecule does not itself contain this energy. An organism's stockpile of ATP is used as a battery to store energy in cells. Utilization of chemical energy from such molecular bond rearrangement powers biological processes in every biological organism.
 
 Living organisms obtain energy from organic and inorganic materials; i.e.~ATP can be synthesized from a variety of biochemical precursors. For example, lithotrophs can oxidize minerals such as nitrites or forms of sulfur, such as elemental sulfur, sulfites, and hydrogen sulfide to produce ATP. In photosynthesis, autotrophs produce ATP using light energy, whereas heterotrophs must consume organic compounds, mostly including carbohydrates, fats, and proteins. The amount of energy actually obtained by the organism is lower than the amount released in combustion of the food; there are losses in digestion, metabolism, and thermogenesis.
-
-Environmental materials that an organism intakes are generally combined with oxygen to release energy, although some can also be oxidized anaerobically by various organisms. The bonds holding the molecules of nutrients together and in particular the bonds holding molecules of free oxygen together are relatively weak compared with the chemical bonds holding carbon dioxide and water together. The utilization of these materials is a form of slow combustion because the nutrients are reacted with oxygen (the materials are oxidized slowly enough that the organisms do not actually produce fire). The oxidation releases energy because stronger bonds (bonds within water and carbon dioxide) have been formed. This net energy may evolve as heat, which may be used by the organism for other purposes, such as breaking other bonds to do chemistry required for survival.
 
 \hypertarget{thermodynamics-of-living-organisms}{%
 \section{Thermodynamics of Living Organisms}\label{thermodynamics-of-living-organisms}}
@@ -110,11 +108,13 @@ A striking feature of metabolism is the similarity of the basic metabolic pathwa
 
 Most of the structures that make up animals, plants and microbes are made from four basic classes of molecule: amino acids, carbohydrates , nucleic acid and lipids (often called fats). As these molecules are vital for life, metabolic reactions either focus on making these molecules during the construction of cells and tissues, or by breaking them down and using them as a source of energy, by their digestion. These biochemicals can be joined together to make polymers such as DNA and proteins, essential macromolecules of life.
 
-\begin{table}[!h]
+\onecolumn
+
+\begin{sidewaystable}[!h]
 
 \caption{\label{tab:macromol}The three essential polymeric macromolecules of life}
 \centering
-\begin{tabular}[t]{llll}
+\begin{tabular}[t]{>{\raggedright\arraybackslash}p{10em}>{\raggedright\arraybackslash}p{10em}>{\raggedright\arraybackslash}p{15em}>{\raggedright\arraybackslash}p{15em}}
 \toprule
 Type of molecule & Name of monomer forms & Name of polymer forms & Examples of polymer forms\\
 \midrule
@@ -123,7 +123,9 @@ Carbohydrates & Monosaccharides & Polysaccharides & Starch, glycogen and cell
 \rowcolor{gray!6}  Nucleic acids & Nucleotides & Polynucleotides & DNA and RNA\\
 \bottomrule
 \end{tabular}
-\end{table}
+\end{sidewaystable}
+
+\twocolumn
 
 The history of the scientific study of metabolism spans several centuries and has moved from examining whole animals in early studies, to examining individual metabolic reactions in modern biochemistry. The first controlled experiments in human metabolism were published by Santorio Santorio in 1614 in his book Ars de statica medicina. He described how he weighed himself before and after eating, sleep, working, sex, fasting, drinking, and excreting. He found that most of the food he took in was lost through what he called ``insensible perspiration''.
 
