fixed table width in cell cycle for pdf

--- a/pdf/cell_cycle.tex
+++ b/pdf/cell_cycle.tex
@@ -288,7 +288,7 @@ Normal members of a particular eukaryotic species all have the same number of nu
 
 \caption{\label{tab:numplants}Chromosome numbers in some plants.}
 \centering
-\begin{tabular}[t]{lr}
+\begin{tabular}[t]{>{\raggedright\arraybackslash}p{10em}>{\centering\arraybackslash}p{10em}}
 \toprule
 Plant & Number of Chromosomes\\
 \midrule
@@ -310,7 +310,7 @@ Cultivated tobacco (tetraploid) & 48\\
 
 \caption{\label{tab:numanimals}Chromosome numbers (2n) in some animals.}
 \centering
-\begin{tabular}[t]{lr}
+\begin{tabular}[t]{>{\raggedright\arraybackslash}p{10em}>{\centering\arraybackslash}p{10em}}
 \toprule
 Animal & Number of Chromosomes\\
 \midrule
