fixed table width in cell cycle for pdf

--- a/pdf/cell_cycle.tex
+++ b/pdf/cell_cycle.tex
@@ -314,15 +314,33 @@ Cultivated tobacco (tetraploid) & 48\\
 \toprule
 Animal & Number of Chromosomes\\
 \midrule
-\rowcolor{gray!6}  Adder's tongue fern (polyploid) & approx. 1,200\\
-Arabidopsis thaliana (diploid) & 10\\
-\rowcolor{gray!6}  Einkorn wheat (diploid) & 14\\
-Rye (diploid) & 14\\
-\rowcolor{gray!6}  Maize (diploid or palaeotetraploid) & 20\\
-\addlinespace
-Durum wheat (tetraploid) & 28\\
-\rowcolor{gray!6}  Bread wheat (hexaploid) & 42\\
-Cultivated tobacco (tetraploid) & 48\\
+\rowcolor{gray!6}  Indian muntjac                          & 7       \\
+Common fruit fly                        & 8       \\
+\rowcolor{gray!6}  Pill millipede (\textit{Arthrosphaera fumosa}) & 30      \\
+        Earthworm (\textit{Octodrilus complanatus})    & 36      \\
+\rowcolor{gray!6}  Tibetan fox                             & 36      \\
+Domestic cat                            & 38      \\
+\rowcolor{gray!6}  Domestic pig                            & 38      \\
+Laboratory mouse                        & 40      \\
+\rowcolor{gray!6}  Laboratory rat                          & 42      \\
+        Rabbit (\textit{Oryctolagus cuniculus})        & 44      \\
+\rowcolor{gray!6}  Syrian hamster                          & 44      \\
+Guppy (\textit{Poecilia reticulata})           & 46      \\
+\rowcolor{gray!6}  Human                                   & 46      \\
+Hares                                   & 48      \\
+\rowcolor{gray!6}  Gorillas, chimpanzees                   & 48      \\
+Domestic sheep                          & 54      \\
+\rowcolor{gray!6}  Garden snail                            & 54      \\
+Silkworm                                & 56      \\
+\rowcolor{gray!6}  Elephants                               & 56      \\
+Cow                                     & 60      \\
+\rowcolor{gray!6}  Donkey                                  & 62      \\
+Guinea pig                              & 64      \\
+\rowcolor{gray!6}  Horse                                   & 64      \\
+Dog                                     & 78      \\
+\rowcolor{gray!6}  Hedgehog                                & 90      \\
+Goldfish                                & 100–104 \\
+\rowcolor{gray!6}  Kingfisher                              & 132    \\
 \bottomrule
 \end{tabular}
 \end{table}
