fixed The Atom in basic chemistry

--- a/pdf/basic_chemistry.tex
+++ b/pdf/basic_chemistry.tex
@@ -21,7 +21,7 @@ Usually atoms can be imagined as a nucleus of protons and neutrons, and a surrou
 \hypertarget{the-atom}{%
 \section{The Atom}\label{the-atom}}
 
-The atom is the basic unit of chemistry. It consists of a dense core called the atomic nucleus surrounded by a space occupied by an electron cloud. Only the most common variety of hydrogen has no neutrons. Protons and neutrons are called nucleons. More than 99.94\% of an atom's mass is in the nucleus. The protons have a positive electric charge, the electrons have a negative electric charge, and the neutrons have no electric charge. If the number of protons and electrons are equal, then the atom is electrically neutral. If an atom has more or fewer electrons than protons, then it has an overall negative or positive charge, respectively. These atoms are called ions.
+The atom is the basic unit of chemistry. It consists of a dense core called the atomic nucleus surrounded by a space occupied by an electron cloud. The nucleus is made of one or more protons and a number of neutrons. Only the most common variety of hydrogen has no neutrons. Only the most common variety of hydrogen has no neutrons. Protons and neutrons are called nucleons. More than 99.94\% of an atom's mass is in the nucleus. The protons have a positive electric charge, the electrons have a negative electric charge, and the neutrons have no electric charge. If the number of protons and electrons are equal, then the atom is electrically neutral. If an atom has more or fewer electrons than protons, then it has an overall negative or positive charge, respectively. These atoms are called ions.
 
 Atoms are extremely small, typically around 100 picometers (1 picometer = 10\textsuperscript{-12}m) across. They are so small that accurately predicting their behavior using classical physics---as if they were billiard balls, for example---is not possible due to quantum effects. Current atomic models use \href{https://en.wikipedia.org/wiki/Quantum_mechanics}{quantum mechanics} to better explain and predict this behavior. The word quantum derives from the Latin, meaning ``how great'' or ``how much''. In quantum mechanics, it refers to a discrete unit assigned to certain physical quantities such as the energy of an atom at rest. The discovery that particles are discrete packets of energy with wave-like properties led to the branch of physics dealing with atomic and subatomic systems which is today called quantum mechanics. It underlies the mathematical framework of many fields of physics and chemistry.
 
