--- a/pdf/biology.tex
+++ b/pdf/biology.tex
@@ -1,9 +1,19 @@
 \hypertarget{biology-the-science-of-life}{%
 \chapter{Biology: The Science of Life}\label{biology-the-science-of-life}}
 
-\href{https://en.wikipedia.org/wiki/Biology}{Biology} is the natural science that studies life and living organisms, including their physical structure, chemical processes, molecular interactions, physiological mechanisms, development and evolution. Despite the complexity of the science, certain unifying concepts consolidate it into a single, coherent field. Biology recognizes the cell as the basic unit of life, genes as the basic unit of heredity, and evolution as the engine that propels the creation and extinction of species. Living organisms (from Greek: ὀργανισμός, organismos) are open systems that survive by transforming energy and decreasing their local entropy to maintain a stable and vital condition defined as homeostasis.
-
-
+\href{https://en.wikipedia.org/wiki/Biology}{Biology} is the natural
+science that studies life and living organisms, including their physical
+structure, chemical processes, molecular interactions, physiological
+mechanisms, development and evolution. Despite the complexity of the
+science, certain unifying concepts consolidate it into a single,
+coherent field. Biology recognizes the cell as the basic unit of life,
+genes as the basic unit of heredity, and evolution as the engine that
+propels the creation and extinction of species. Living
+\href{https://en.wikipedia.org/wiki/Organism}{organisms} (from Greek
+ὀργανισμός, organismos, from ὄργανον, organon, i.e.~``instrument,
+implement, tool, organ of sense or apprehension'') are open systems that
+survive by transforming energy and decreasing their local entropy to
+maintain a stable and vital condition defined as homeostasis.
 
 \begin{figure}
 
