--- a/basic_chemistry.rmd
+++ b/basic_chemistry.rmd
@@ -96,7 +96,7 @@ The electron cloud is a region surrounding the nucleus. The electrons in an atom
 
 Electrons, like other particles, have properties of both a particle and a wave. In atomic theory and quantum mechanics, an atomic orbital is a mathematical function describing the location and wave-like behavior of electrons surrounding an atom. The term "orbital" was coined by [Robert Mulliken](https://en.wikipedia.org/wiki/Robert_S._Mulliken) in 1932 as an abbreviation for one-electron orbital wave function. The term atomic orbital is also used to refer to the physical region or space where the electron can be calculated to be present using this function. Each atomic orbital corresponds to a particular energy level of the electron. The electron can change its state to a higher energy level by absorbing sufficient energy to boost it into the new quantum state. Likewise, through spontaneous emission, an electron in a higher energy state can drop to a lower energy state while radiating the excess energy. 
 
-The electrons in an atom are described by a unique set of values of four so-called quantum numbers n, ℓ, and m~ℓ~, and s. As n increases, the electron is farther from the nucleus, on average, has a higher energy and is, therefore, less tightly bound to the nucleus. For each value of n, ℓ can take integer (whole number) values ranging from 0 to n − 1 and m~ℓ~  can take integer values ranging from -ℓ to +ℓ, and two values of s ($+\frac{1}{2}$ or $-\frac{1}{2}$) hence higher-n electron states are more numerous. Thus, each n-shell can accommodate up to a maximum of 2n^2^ electrons. In chemistry, values n = 1, 2, 3, 4, 5, 6, 7 correspond to the so-called electron shells, which may be thought of as onion-like layers surrounding the nucleus that are filled with electrons. The shell terminology comes from [Arnold Sommerfeld's](https://en.wikipedia.org/wiki/Arnold_Sommerfeld) modification of the Bohr model. Sommerfeld retained Bohr's planetary model (electrons orbiting the atomic nucleus like planets the sun), but added orbits that formed a thick "shell" instead of the infinitely thin circular orbit of Bohr's model. The closest shell to the nucleus is called the "1 shell" (also called the "K shell"), followed by the "2 shell" (or "L shell"), then the "3 shell" (or "M shell"), and so on farther and farther from the nucleus. The shells correspond to the principal quantum numbers (n = 1, 2, 3, 4 ...) or are labeled alphabetically with the letters used in [X-ray notation](https://en.wikipedia.org/wiki/x-ray_notation) (K, L, M, …). Each shell is composed of one or more subshells (labeled with the letters s, p, d, and f, which are derived from the terms *s*harp, *p*rincipal, *d*iffuse, and *f*undamental historically used in the description of atomic spectral lines). For example, the first shell (with principal quantum number n = 1 also referred to as K shell) has one subshell, called 1s; the second (with principal quantum number n = 2 also referred to as L shell) shell has two subshells, called 2s (ℓ = 0) and 2p (ℓ = 1 and m~ℓ~ = -1, 0, 1); the third shell (with principal quantum number n = 3 also referred to as M shell) has 3s (ℓ = 0), 3p (ℓ = 1 and m~ℓ~ = -1, 0, 1), and 3d (ℓ = 2 and m~ℓ~ = -2, -1, 0, 1, 2); the fourth shell (with principal quantum number n = 4 also referred to as N shell) has 4s, 4p, 4d and 4f; the fifth shell (with principal quantum number n = 5 also referred to as O shell) has 5s, 5p, 5d, and 5f and can theoretically hold more in the 5g subshell that is not occupied in the ground-state electron configuration of any known element. 
+The electrons in an atom are described by a unique set of values of four so-called quantum numbers n, ℓ, and m~ℓ~, and s. As n increases, the electron is farther from the nucleus, on average, has a higher energy and is, therefore, less tightly bound to the nucleus. For each value of n, ℓ can take integer (whole number) values ranging from 0 to n − 1 and m~ℓ~  can take integer values ranging from -ℓ to +ℓ, and s can take a value of ($+\frac{1}{2}$ or $-\frac{1}{2}$) for each value of ℓ and m~ℓ~. Hence, higher-n electron states are more numerous. Thus, each n-shell can accommodate up to a maximum of 2n^2^ electrons. In chemistry, values n = 1, 2, 3, 4, 5, 6, 7 correspond to the so-called electron shells, which may be thought of as onion-like layers surrounding the nucleus that are filled with electrons. The shell terminology comes from [Arnold Sommerfeld's](https://en.wikipedia.org/wiki/Arnold_Sommerfeld) modification of the Bohr model. Sommerfeld retained Bohr's planetary model (electrons orbiting the atomic nucleus like planets the sun), but added orbits that formed a thick "shell" instead of the infinitely thin circular orbit of Bohr's model. The closest shell to the nucleus is called the "1 shell" (also called the "K shell"), followed by the "2 shell" (or "L shell"), then the "3 shell" (or "M shell"), and so on farther and farther from the nucleus. The shells correspond to the principal quantum numbers (n = 1, 2, 3, 4 ...) or are labeled alphabetically with the letters used in [X-ray notation](https://en.wikipedia.org/wiki/x-ray_notation) (K, L, M, …). Each shell is composed of one or more subshells (labeled with the letters s, p, d, and f, which are derived from the terms *s*harp, *p*rincipal, *d*iffuse, and *f*undamental historically used in the description of atomic spectral lines). For example, the first shell (with principal quantum number n = 1 also referred to as K shell) has one subshell, called 1s; the second (with principal quantum number n = 2 also referred to as L shell) shell has two subshells, called 2s (ℓ = 0) and 2p (ℓ = 1 and m~ℓ~ = -1, 0, 1); the third shell (with principal quantum number n = 3 also referred to as M shell) has 3s (ℓ = 0), 3p (ℓ = 1 and m~ℓ~ = -1, 0, 1), and 3d (ℓ = 2 and m~ℓ~ = -2, -1, 0, 1, 2); the fourth shell (with principal quantum number n = 4 also referred to as N shell) has 4s, 4p, 4d and 4f; the fifth shell (with principal quantum number n = 5 also referred to as O shell) has 5s, 5p, 5d, and 5f and can theoretically hold more in the 5g subshell that is not occupied in the ground-state electron configuration of any known element. 
 
 (ref:atomorb) [The five filled atomic orbitals of a neon atom](https://commons.wikimedia.org/wiki/File:S-p-Orbitals.svg) separated and arranged in order of increasing energy from left to right, with the last three orbitals being equal in energy. Each orbital holds up to two electrons, which most probably exist in the zones represented by the colored bubbles. Each electron is equally present in both orbital zones, shown here by color only to highlight the different wave phase.
 
