--- a/pdf/basic_chemistry.tex
+++ b/pdf/basic_chemistry.tex
@@ -381,9 +381,9 @@ increases, the electron is farther from the nucleus, on average, has a
 higher energy and is, therefore, less tightly bound to the nucleus. For
 each value of n, $\ell$ can take integer (whole number) values ranging from 0
 to n − 1 and m\textsubscript{$\ell$} can take integer values ranging from $-\ell$
-to $+\ell$, and two values of s
+to $+\ell$, and s can take values of
 ($+\frac{1}{2}$ or
-$-\frac{1}{2}$) hence higher-n electron
+$-\frac{1}{2}$) for each value of $\ell$ and m\textsubscript{$\ell$}. Hence higher-n electron
 states are more numerous. Thus, each n-shell can accommodate up to a
 maximum of 2n\textsuperscript{2} electrons. In chemistry, values n = 1,
 2, 3, 4, 5, 6, 7 correspond to the so-called electron shells, which may
