--- a/pdf/basic_chemistry.tex
+++ b/pdf/basic_chemistry.tex
@@ -14,7 +14,7 @@ A chemical reaction is a transformation of some substances into one or more diff
 \hypertarget{matter}{%
 \section{Matter}\label{matter}}
 
-In classical physics and general chemistry, matter is any substance that has mass and takes up space by having volume. Matter should not be confused with mass, as the two are not the same in modern physics. Matter is a general term describing any `physical substance'. By contrast, mass is not a substance but rather a quantitative property of matter and other substances or systems. All everyday objects that can be touched are ultimately composed of atoms, which are made up of interacting subatomic particles, and in everyday as well as scientific usage, ``matter'' generally includes atoms and anything made up of them, and any particles (or combination of particles) that act as if they have both rest mass and volume. However it does not include massless particles such as photons, or other energy phenomena or waves such as light or sound. Matter exists in various states (also known as phases). These include classical everyday phases such as solid, liquid, and gas -- for example water exists as ice, liquid water, and gaseous steam -- but other states are possible, including plasma, Bose--Einstein condensates, fermionic condensates, and quark--gluon plasma.
+In classical physics and general chemistry, matter (from Latin materia meaning “matter, stuff, material”, a derivative of Latin mater meaning “mother”) is any substance that has mass and takes up space by having volume. Matter should not be confused with mass, as the two are not the same in modern physics. Matter is a general term describing any `physical substance'. By contrast, mass is not a substance but rather a quantitative property of matter and other substances or systems. All everyday objects that can be touched are ultimately composed of atoms, which are made up of interacting subatomic particles, and in everyday as well as scientific usage, ``matter'' generally includes atoms and anything made up of them, and any particles (or combination of particles) that act as if they have both rest mass and volume. However it does not include massless particles such as photons, or other energy phenomena or waves such as light or sound. Matter exists in various states (also known as phases). These include classical everyday phases such as solid, liquid, and gas -- for example water exists as ice, liquid water, and gaseous steam -- but other states are possible, including plasma, Bose--Einstein condensates, fermionic condensates, and quark--gluon plasma.
 
 Usually atoms can be imagined as a nucleus of protons and neutrons, and a surrounding ``cloud'' of orbiting electrons which ``take up space''. However this is only somewhat correct, because subatomic particles and their properties are governed by their quantum nature, which means they do not act as everyday objects appear to act -- they can act like waves as well as particles and they do not have well-defined sizes or positions. In the Standard Model of particle physics, matter is not a fundamental concept because the elementary constituents of atoms are quantum entities which do not have an inherent ``size'' or ``volume'' in any everyday sense of the word. Due to the exclusion principle and other fundamental interactions, some ``point particles'' known as fermions (quarks, leptons), and many composites and atoms, are effectively forced to keep a distance from other particles under everyday conditions; this creates the property of matter which appears to us as matter taking up space.
 
