added solution section to basic chemistry and diffusion and osmosis figures to membrane structure; recompiled pdf

--- a/pdf/basic_chemistry.tex
+++ b/pdf/basic_chemistry.tex
@@ -918,6 +918,71 @@ An ion is a charged species, an atom or a molecule, that has lost or gained one 
 
 Plasma is composed of gaseous matter that has been completely ionized, usually through high temperature.
 
+\hypertarget{solutions}{%
+\section{Solutions}\label{solutions}}
+
+In chemistry, a solution is a special type of homogenous mixture composed of two or more substances. In such a mixture, a solute is a substance dissolved in another substance, known as a solvent. Homogeneous means that the components of the mixture form a single phase (i.e.~liquid, gas or solid). Heterogeneous means that the components of the mixture are of different phase. Usually, the substance present in the greatest amount is considered the solvent. Solvents can be gases, liquids or solids. One or more components present in the solution other than the solvent are called solutes. The solution has the same physical state as the solvent. One important parameter of a solution is the concentration, which is a measure of the amount of solute in a given amount of solution or solvent. The term ``aqueous solution'' is used when one of the solvents is water. If the solvent is a gas, only gases (non-condensable) or vapors (condensable) are dissolved under a given set of conditions. An example of a gaseous solution is air (oxygen and and carbon dioxide dissolved in nitrogen).
+
+If the solvent is a liquid, then almost all gases, liquids, and solids can be dissolved. Here are some examples:
+
+\begin{itemize}
+\tightlist
+\item
+  Gas in liquid:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Oxygen in water
+  \item
+    Carbon dioxide in water -- a less simple example, because the solution is accompanied by a chemical reaction (formation of ions). The visible bubbles in carbonated water are not the dissolved gas, but only an effervescence of carbon dioxide that has come out of solution; the dissolved gas itself is not visible since it is dissolved on a molecular level.
+  \end{itemize}
+\item
+  Liquid in liquid:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    The mixing of two or more substances of the same chemistry but different concentrations to form a constant. (Homogenization of solutions)
+  \item
+    Alcoholic beverages are basically solutions of ethanol in water.
+  \end{itemize}
+\item
+  Solid in liquid:
+  *Sucrose (table sugar) in water
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Sodium chloride (NaCl) (table salt) or any other salt in water, which forms an electrolyte: When dissolving, salt dissociates into ions.
+  \end{itemize}
+\item
+  Solutions in water are especially common, and are called aqueous solutions.
+\item
+  Non-aqueous solutions are when the liquid solvent involved is not water.
+\end{itemize}
+
+Counter examples are provided by liquid mixtures that are not homogeneous: colloids, suspensions, emulsions are not considered solutions.
+
+Body fluids are examples for complex liquid solutions, containing many solutes. Many of these are electrolytes, since they contain solute ions, such as potassium. Furthermore, they contain solute molecules like sugar and urea. Oxygen and carbon dioxide are also essential components of blood chemistry, where significant changes in their concentrations may be a sign of severe illness or injury.
+
+If the solvent is a solid, then gases, liquids and solids can be dissolved.
+
+The ability of one compound to dissolve in another compound is called solubility. When a liquid can completely dissolve in another liquid the two liquids are miscible (for example alcohol and water). Two substances that can never mix to form a solution are said to be immiscible (for example oil and water).
+
+Usually, the greater the temperature of the solvent, the more of a given solid solute it can dissolve. However, most gases and some compounds exhibit solubilities that decrease with increased temperature. The solubility of liquids in liquids is generally less temperature-sensitive than that of solids or gases.
+
+The physical properties of compounds such as melting point and boiling point change when other compounds are added. Together they are called colligative properties. There are several ways to quantify the amount of one compound dissolved in the other compounds collectively called concentration. Examples include molarity, volume fraction, and mole fraction.
+
+Molarity (also called molar concentration, amount concentration or substance concentration) is a measure of the concentration of a chemical species, in particular of a solute in a solution, in terms of amount of substance per unit volume of solution. In chemistry, the most commonly used unit for molarity is the number of moles per litre, having the unit symbol mol/L or mol⋅dm\textsuperscript{−3} (cubic decimeter) in SI unit. A solution with a concentration of 1 mol/L is said to be 1 molar, commonly designated as 1 M.
+
+Volume percent is the concentration of a certain solute, measured by volume, in a solution. It has as a denominator the volume of the mixture itself, as usual for expressions of concentration, rather than the total of all the individual component's volumes prior to mixing:
+
+\[ volume \space percent=\frac{volume \space of \space solute}{volume \space of \space solution} \times 100 \]
+
+Volume percent is usually used when the solution is made by mixing two fluids, such as liquids or gases. For example, the volume concentration of alcohol in beer is usually 5\%, i.e.~every 100 ml of beer contains 5 ml of alcohol.
+
+
 \hypertarget{acids-and-bases}{%
 \section{Acids And Bases}\label{acids-and-bases}}
 
