--- a/pdf/membrane_structure.tex
+++ b/pdf/membrane_structure.tex
@@ -139,6 +139,15 @@ The permeability of a membrane is the rate of passive diffusion of molecules thr
 
 \href{https://en.wikipedia.org/wiki/Diffusion}{Diffusion} is the net movement of material from an area of high concentration to an area with lower concentration. The difference of concentration between the two areas is often termed as the concentration gradient, and diffusion will continue until this gradient has been eliminated. Since diffusion moves materials from an area of higher concentration to an area of lower concentration, it is described as moving solutes ``down the concentration gradient'' (compared with active transport, which often moves material from area of low concentration to area of higher concentration, and therefore referred to as moving the material ``against the concentration gradient''). However, in many cases (e.g.~passive drug transport) the driving force of passive transport can not be simplified to the concentration gradient. If there are different solutions at the two sides of the membrane with different equilibrium solubility of the drug, the difference in degree of saturation is the driving force of passive membrane transport. It is also true for supersaturated solutions which are more and more important owing to the spreading of the application of amorphous solid dispersions for drug bioavailability enhancement.
 
+\begin{figure}
+
+{\centering \includegraphics[width=0.7\linewidth]{./figures/membrane/Blausen_0315_Diffusion} 
+
+}
+
+\caption{\href{https://commons.wikimedia.org/wiki/File:Blausen_0315_Diffusion.png}{Diffusion of a purple dye in water.}}\label{fig:diffusion}
+\end{figure}
+
 Simple diffusion and osmosis are in some ways similar. Simple diffusion is the passive movement of solute from a high concentration to a lower concentration until the concentration of the solute is uniform throughout and reaches equilibrium. Osmosis is much like simple diffusion but it specifically describes the movement of water (not the solute) across a selectively permeable membrane until there is an equal concentration of water and solute on both sides of the membrane. Simple diffusion and osmosis are both forms of passive transport and require none of the cell's ATP energy.
 
 \hypertarget{facilitated-diffusion}{%
@@ -150,6 +159,20 @@ Facilitated diffusion, also called carrier-mediated osmosis, is the movement of 
 \subsection{Osmosis}\label{osmosis}}
 
 \href{https://en.wikipedia.org/wiki/Osmosis}{Osmosis} is the movement of water molecules across a selectively permeable membrane. The net movement of water molecules through a partially permeable membrane from a solution of high water potential to an area of low water potential. A cell with a less negative water potential will draw in water but this depends on other factors as well such as solute potential (pressure in the cell e.g.~solute molecules) and pressure potential (external pressure e.g.~cell wall). There are three types of Osmosis solutions: the isotonic solution, hypotonic solution, and hypertonic solution. Isotonic solution is when the extracellular solute concentration is balanced with the concentration inside the cell. In the Isotonic solution, the water molecules still moves between the solutions, but the rates are the same from both directions, thus the water movement is balanced between the inside of the cell as well as the outside of the cell. A hypotonic solution is when the solute concentration outside the cell is lower than the concentration inside the cell. In hypotonic solutions, the water moves into the cell, down its concentration gradient (from higher to lower water concentrations). That can cause the cell to swell. Cells that don't have a cell wall, such as animal cells, could burst in this solution. A hypertonic solution is when the solute concentration is higher (think of hyper - as high) than the concentration inside the cell. In hypertonic solution, the water will move out, causing the cell to shrink.
+
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.7\linewidth]{./figures/membrane/Osmose_en} 
+
+}
+
+\caption{\href{https://commons.wikimedia.org/wiki/File:Osmose_en.svg}{An example of osmosis}: a semi-permeable (selectively permebable) membrane separates two compartments containing a higher concentration of a dissolved salt on the left side compared to the right side (i.e.~the left side is hypertonic compared to the (hypotonic) right side). A net flow of water will occur from the right to the left side until the concentration of salt on both sides of the membrane is equal (i.e.~both sides are isotonic).)}\label{fig:osmosis}
+\end{figure}
+
+
+Simple diffusion and osmosis are in some ways similar. Simple diffusion is the passive movement of solute from a high concentration to a lower concentration until the concentration of the solute is uniform throughout and reaches equilibrium. Osmosis is much like simple diffusion but it specifically describes the movement of water (not the solute) across a selectively permeable membrane until there is an equal concentration of water and solute on both sides of the membrane. Simple diffusion and osmosis are both forms of passive transport and require none of the cell's ATP energy.
 
 \hypertarget{active-transport}{%
 \subsection{Active Transport}\label{active-transport}}
